--- a/Homework/JavaScript/homework/homework-js-7/index7.html
+++ b/Homework/JavaScript/homework/homework-js-7/index7.html
@@ -9,16 +9,15 @@
 
 <div id="text">
   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, fugiat.
-</div>
-<div>
+  <br>
   <button id="btn">click</button>
 </div>
 <div>
   <button id="self">do not prees this button</button>
 </div>
-<form>
+<form id="vik">
   <label>Введіть ваш вік:
-    <input type="nomber" id="age">
+    <input type="number" id="age">
     <button id="ok">OK</button>
   </label>
 </form>
@@ -41,6 +40,41 @@
 </ul>
 
 <div id="coment"></div>
+<br>
+<form id="form61"> form 1
+  <br>
+  <input type="text" name="name1" id="input11">
+  <input type="text" name="name1" id="input12">
+</form>
+<form id="form62"> form 2 <br>
+  <input type="text" name="name2" id="input21">
+  <input type="text" name="name2" id="input22">
+</form>
+<button id="btn6">Click</button>
+
+<div id="table">ТАБЛИЦЯ</div>
+
+<div id="table2">
+  ТАБЛИЦЯ 2
+  <form name="table2">
+    <label>Кількість рядків
+      <input type="number" name="rows">
+    </label>
+    <br>
+    <label>Кількість стовпців
+      <input type="number" name="columns">
+    </label>
+    <br>
+    <label>Текст
+      <input name="text">
+    </label>
+    <br>
+    <button id="btn7">OK</button>
+  </form>
+</div>
+
+
+
 <!--<div id="content"></div>-->
 <!--<h1>Правила бойцовского клуба</h1>-->
 <!--<div id="wrap">-->
